tests/type-errors/10-logical-type.flt
// Logical operators require bool
// --- Command: dotnet run --project FunLang -- --emit-type --expr "1 && 2" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:0-1
   = hint: Check that all branches of your expression return the same type
